lib/core/ffi/litert_lm_bindings.dart


  late final _litert_lm_responses_get_num_token_scores_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<LiteRtLmResponses>,
              ffi.Int)>>('litert_lm_responses_get_num_token_scores_at');
  late final _litert_lm_responses_get_num_token_scores_at =
      _litert_lm_responses_get_num_token_scores_atPtr
          .asFunction<int Function(ffi.Pointer<LiteRtLmResponses>, int)>();

  ffi.Pointer<ffi.Float> litert_lm_responses_get_token_scores_at(
    ffi.Pointer<LiteRtLmResponses> responses,
    int index,
  ) {
    return _litert_lm_responses_get_token_scores_at(
      responses,
      index,
    );
  }

  late final _litert_lm_responses_get_token_scores_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Float> Function(ffi.Pointer<LiteRtLmResponses>,
              ffi.Int)>>('litert_lm_responses_get_token_scores_at');
  late final _litert_lm_responses_get_token_scores_at =
      _litert_lm_responses_get_token_scores_atPtr.asFunction<
          ffi.Pointer<ffi.Float> Function(
              ffi.Pointer<LiteRtLmResponses>, int)>();

  ffi.Pointer<LiteRtLmBenchmarkInfo> litert_lm_session_get_benchmark_info(
    ffi.Pointer<LiteRtLmSession> session,
  ) {
    return _litert_lm_session_get_benchmark_info(
      session,
    );
  }

  late final _litert_lm_session_get_benchmark_infoPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<LiteRtLmBenchmarkInfo> Function(
                  ffi.Pointer<LiteRtLmSession>)>>(
      'litert_lm_session_get_benchmark_info');
  late final _litert_lm_session_get_benchmark_info =
      _litert_lm_session_get_benchmark_infoPtr.asFunction<
          ffi.Pointer<LiteRtLmBenchmarkInfo> Function(
              ffi.Pointer<LiteRtLmSession>)>();

  void litert_lm_benchmark_info_delete(
    ffi.Pointer<LiteRtLmBenchmarkInfo> benchmark_info,
  ) {
    return _litert_lm_benchmark_info_delete(
      benchmark_info,
    );
  }

  late final _litert_lm_benchmark_info_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmBenchmarkInfo>)>>(
      'litert_lm_benchmark_info_delete');
  late final _litert_lm_benchmark_info_delete =
      _litert_lm_benchmark_info_deletePtr
          .asFunction<void Function(ffi.Pointer<LiteRtLmBenchmarkInfo>)>();

  double litert_lm_benchmark_info_get_time_to_first_token(
    ffi.Pointer<LiteRtLmBenchmarkInfo> benchmark_info,
  ) {
    return _litert_lm_benchmark_info_get_time_to_first_token(
      benchmark_info,
    );
  }

  late final _litert_lm_benchmark_info_get_time_to_first_tokenPtr = _lookup<
          ffi.NativeFunction<
              ffi.Double Function(ffi.Pointer<LiteRtLmBenchmarkInfo>)>>(
      'litert_lm_benchmark_info_get_time_to_first_token');
  late final _litert_lm_benchmark_info_get_time_to_first_token =
      _litert_lm_benchmark_info_get_time_to_first_tokenPtr
          .asFunction<double Function(ffi.Pointer<LiteRtLmBenchmarkInfo>)>();

  double litert_lm_benchmark_info_get_total_init_time_in_second(
    ffi.Pointer<LiteRtLmBenchmarkInfo> benchmark_info,
  ) {
    return _litert_lm_benchmark_info_get_total_init_time_in_second(
      benchmark_info,
    );
  }

  late final _litert_lm_benchmark_info_get_total_init_time_in_secondPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Double Function(ffi.Pointer<LiteRtLmBenchmarkInfo>)>>(
          'litert_lm_benchmark_info_get_total_init_time_in_second');
  late final _litert_lm_benchmark_info_get_total_init_time_in_second =
      _litert_lm_benchmark_info_get_total_init_time_in_secondPtr
          .asFunction<double Function(ffi.Pointer<LiteRtLmBenchmarkInfo>)>();

  int litert_lm_benchmark_info_get_num_prefill_turns(
    ffi.Pointer<LiteRtLmBenchmarkInfo> benchmark_info,
  ) {
    return _litert_lm_benchmark_info_get_num_prefill_turns(
      benchmark_info,
    );
  }

  late final _litert_lm_benchmark_info_get_num_prefill_turnsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<LiteRtLmBenchmarkInfo>)>>(
      'litert_lm_benchmark_info_get_num_prefill_turns');
  late final _litert_lm_benchmark_info_get_num_prefill_turns =
      _litert_lm_benchmark_info_get_num_prefill_turnsPtr
          .asFunction<int Function(ffi.Pointer<LiteRtLmBenchmarkInfo>)>();

  int litert_lm_benchmark_info_get_num_decode_turns(
    ffi.Pointer<LiteRtLmBenchmarkInfo> benchmark_info,
  ) {
    return _litert_lm_benchmark_info_get_num_decode_turns(
      benchmark_info,
    );
  }

  late final _litert_lm_benchmark_info_get_num_decode_turnsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<LiteRtLmBenchmarkInfo>)>>(
      'litert_lm_benchmark_info_get_num_decode_turns');
  late final _litert_lm_benchmark_info_get_num_decode_turns =
      _litert_lm_benchmark_info_get_num_decode_turnsPtr
          .asFunction<int Function(ffi.Pointer<LiteRtLmBenchmarkInfo>)>();

  int litert_lm_benchmark_info_get_prefill_token_count_at(
    ffi.Pointer<LiteRtLmBenchmarkInfo> benchmark_info,
    int index,
  ) {
    return _litert_lm_benchmark_info_get_prefill_token_count_at(
      benchmark_info,
      index,
    );
  }

  late final _litert_lm_benchmark_info_get_prefill_token_count_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<LiteRtLmBenchmarkInfo>,
              ffi.Int)>>('litert_lm_benchmark_info_get_prefill_token_count_at');
  late final _litert_lm_benchmark_info_get_prefill_token_count_at =
      _litert_lm_benchmark_info_get_prefill_token_count_atPtr
          .asFunction<int Function(ffi.Pointer<LiteRtLmBenchmarkInfo>, int)>();

  int litert_lm_benchmark_info_get_decode_token_count_at(
    ffi.Pointer<LiteRtLmBenchmarkInfo> benchmark_info,
    int index,
  ) {
    return _litert_lm_benchmark_info_get_decode_token_count_at(
      benchmark_info,
      index,
    );
  }

  late final _litert_lm_benchmark_info_get_decode_token_count_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<LiteRtLmBenchmarkInfo>,
              ffi.Int)>>('litert_lm_benchmark_info_get_decode_token_count_at');
  late final _litert_lm_benchmark_info_get_decode_token_count_at =
      _litert_lm_benchmark_info_get_decode_token_count_atPtr
          .asFunction<int Function(ffi.Pointer<LiteRtLmBenchmarkInfo>, int)>();

  double litert_lm_benchmark_info_get_prefill_tokens_per_sec_at(
    ffi.Pointer<LiteRtLmBenchmarkInfo> benchmark_info,
    int index,
  ) {
    return _litert_lm_benchmark_info_get_prefill_tokens_per_sec_at(
      benchmark_info,
      index,
    );
  }

  late final _litert_lm_benchmark_info_get_prefill_tokens_per_sec_atPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Double Function(
                      ffi.Pointer<LiteRtLmBenchmarkInfo>, ffi.Int)>>(
          'litert_lm_benchmark_info_get_prefill_tokens_per_sec_at');
  late final _litert_lm_benchmark_info_get_prefill_tokens_per_sec_at =
      _litert_lm_benchmark_info_get_prefill_tokens_per_sec_atPtr.asFunction<
          double Function(ffi.Pointer<LiteRtLmBenchmarkInfo>, int)>();

  double litert_lm_benchmark_info_get_decode_tokens_per_sec_at(
    ffi.Pointer<LiteRtLmBenchmarkInfo> benchmark_info,
    int index,
  ) {
    return _litert_lm_benchmark_info_get_decode_tokens_per_sec_at(
      benchmark_info,
      index,
    );
  }

  late final _litert_lm_benchmark_info_get_decode_tokens_per_sec_atPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Double Function(
                      ffi.Pointer<LiteRtLmBenchmarkInfo>, ffi.Int)>>(
          'litert_lm_benchmark_info_get_decode_tokens_per_sec_at');
  late final _litert_lm_benchmark_info_get_decode_tokens_per_sec_at =
      _litert_lm_benchmark_info_get_decode_tokens_per_sec_atPtr.asFunction<
          double Function(ffi.Pointer<LiteRtLmBenchmarkInfo>, int)>();

  int litert_lm_session_run_decode_async(
    ffi.Pointer<LiteRtLmSession> session,
    LiteRtLmStreamCallback callback,
    ffi.Pointer<ffi.Void> callback_data,
  ) {
    return _litert_lm_session_run_decode_async(
      session,
      callback,
      callback_data,
    );
  }

  late final _litert_lm_session_run_decode_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<LiteRtLmSession>, LiteRtLmStreamCallback,
              ffi.Pointer<ffi.Void>)>>('litert_lm_session_run_decode_async');
  late final _litert_lm_session_run_decode_async =
      _litert_lm_session_run_decode_asyncPtr.asFunction<
          int Function(ffi.Pointer<LiteRtLmSession>, LiteRtLmStreamCallback,
              ffi.Pointer<ffi.Void>)>();

  int litert_lm_session_generate_content_stream(
    ffi.Pointer<LiteRtLmSession> session,
    ffi.Pointer<LiteRtLmInputData> inputs,
    int num_inputs,
    LiteRtLmStreamCallback callback,
    ffi.Pointer<ffi.Void> callback_data,
  ) {
    return _litert_lm_session_generate_content_stream(
      session,
      inputs,
      num_inputs,
      callback,
      callback_data,
    );
  }

  late final _litert_lm_session_generate_content_streamPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Pointer<LiteRtLmSession>,
                  ffi.Pointer<LiteRtLmInputData>,
                  ffi.Size,
                  LiteRtLmStreamCallback,
                  ffi.Pointer<ffi.Void>)>>(
      'litert_lm_session_generate_content_stream');
  late final _litert_lm_session_generate_content_stream =
      _litert_lm_session_generate_content_streamPtr.asFunction<
          int Function(
              ffi.Pointer<LiteRtLmSession>,
              ffi.Pointer<LiteRtLmInputData>,
              int,
              LiteRtLmStreamCallback,
              ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<LiteRtLmConversation> litert_lm_conversation_create(
    ffi.Pointer<LiteRtLmEngine> engine,
    ffi.Pointer<LiteRtLmConversationConfig> config,
  ) {
    return _litert_lm_conversation_create(
      engine,
      config,
    );
  }

  late final _litert_lm_conversation_createPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<LiteRtLmConversation> Function(
                  ffi.Pointer<LiteRtLmEngine>,
                  ffi.Pointer<LiteRtLmConversationConfig>)>>(
      'litert_lm_conversation_create');
  late final _litert_lm_conversation_create =
      _litert_lm_conversation_createPtr.asFunction<
          ffi.Pointer<LiteRtLmConversation> Function(
              ffi.Pointer<LiteRtLmEngine>,
              ffi.Pointer<LiteRtLmConversationConfig>)>();

  void litert_lm_conversation_delete(
    ffi.Pointer<LiteRtLmConversation> conversation,
  ) {
    return _litert_lm_conversation_delete(
      conversation,
    );
  }

  late final _litert_lm_conversation_deletePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<LiteRtLmConversation>)>>(
      'litert_lm_conversation_delete');
  late final _litert_lm_conversation_delete = _litert_lm_conversation_deletePtr
      .asFunction<void Function(ffi.Pointer<LiteRtLmConversation>)>();

  ffi.Pointer<LiteRtLmConversation> litert_lm_conversation_clone(
    ffi.Pointer<LiteRtLmConversation> conversation,
  ) {
    return _litert_lm_conversation_clone(
      conversation,
    );
  }

  late final _litert_lm_conversation_clonePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<LiteRtLmConversation> Function(
                  ffi.Pointer<LiteRtLmConversation>)>>(
      'litert_lm_conversation_clone');
  late final _litert_lm_conversation_clone =
      _litert_lm_conversation_clonePtr.asFunction<
          ffi.Pointer<LiteRtLmConversation> Function(
              ffi.Pointer<LiteRtLmConversation>)>();
